2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (main): Make the message clearer as
	to why we are not running the crawler/indexer when in read only mode.

2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-hal.h: Define TrackerHal as a void
	pointer if it is disabled and just don't use it anywhere, this is
	so function signatures can include it but it will be NULL where it
	is called. Can't think of a better way to do this really.
	
	* src/trackerd/tracker-crawler.[ch]:
	* src/trackerd/tracker-main.[ch]: 
	* src/trackerd/tracker-processor.[ch]: Create TrackerHal in main
	again and pass it around the processor and crawler to use. It is
	need in main now to detect if we are using the laptop battery or
	not to put the daemon into readonly mode.

2008-07-04  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c: Fix typo.

2008-07-04  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c
	(get_account_name_from_imap_uri): Avoid potential invalid memory
	reads.
	(account_text_handler): Check that we're getting the right url tag
	contents.
	(get_imap_accounts): Avoid potential leaks.

2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-log.c: (log_output): Use
	g_strerror() and errno when we can't open the log file so we know
	why.
	
	* src/trackerd/tracker-main.c: Removed the throttle command line
	option, it is only used by the indexer which loads the config file
	separately. Also, plugged a leak in the check_runtime_level()
	function which checks if we are already running.

2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/modules/files.c: Fixed warning.
	
	* src/libtracker-common/tracker-config.[ch]:
	* src/tracker-indexer/tracker-main.c:
	(sanity_check_option_values): Removed config options we now no
	longer have, "OptimizationSweepCount", "Divisions",
	"BucketRatio" and  "Padding".
