@@ -1,5 +1,11 @@
 2008-07-04  Martyn Russell  <martyn@imendio.com>
 
+	* src/trackerd/tracker-main.c: (check_runtime_level): Fixed this
+	function so it sets the daemon to readonly mode depending on
+	battery use + config and if there is a reindex needed.
+
+2008-07-04  Martyn Russell  <martyn@imendio.com>
+
 	* src/trackerd/tracker-main.c: (main): Make the message clearer as
 	to why we are not running the crawler/indexer when in read only mode.
 
